--- a/src/app/pages/fb/fb.page.html
+++ b/src/app/pages/fb/fb.page.html
@@ -8,50 +8,86 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+
+
+    <div slot="fixed" class="ion-padding">
+      <ion-row  *ngIf="fbList.length > 0" class="ion-padding">
+        <ion-col sizeMd="6" offset-md="3" >
+          <div class="ion-text-center">
+            <ion-label style="font-weight: bold;">{{entryValue}}</ion-label>
+          </div>       
+        </ion-col>
+        </ion-row>
   
-  <ion-grid fixed>
-    <ion-row  *ngIf="fbList.length > 0" class="ion-padding">
-      <ion-col sizeMd="6" offset-md="3" >
-        <div class="ion-text-center">
-          <ion-label style="font-weight: bold;">{{entryValue}}</ion-label>
-        </div>       
-      </ion-col>
+      <ion-row  [hidden]="fbList.length > 0">
+        <ion-col sizeMd="6" offset-md="3">
+         <ion-item class="inputItem" lines=none>
+           <ion-input slot="start" type="number" 
+            (ionChange)="checkValue()" clearInput
+            placeholder="Insert a number"  [(ngModel)]= entryValue></ion-input>
+            
+            <ion-button (click)="applyFb()" expand="block" 
+            slot="end" fill="clear" shape="round" *ngIf="msg == false"
+            [disabled]= "!entryValue">
+              Apply FizzBuzz
+            </ion-button>
+         </ion-item>
+         <ion-item *ngIf="msg" lines="none">
+           <ion-label color="danger">
+            {{msgInfo}}
+           </ion-label>
+         </ion-item>
+        </ion-col>
+      </ion-row>
+  
+      <ion-row>
+        <ion-col size="12">
+          <ion-button (click)="clear()" expand="block" 
+           shape="round" 
+            *ngIf="fbList.length > 0">
+            Clear List
+          </ion-button>
+        </ion-col>
       </ion-row>
 
-    <ion-row  [hidden]="fbList.length > 0">
-      <ion-col sizeMd="6" offset-md="3">
-       <ion-item >
-         <ion-input slot="start" type="number" class="ion-text'center"
-          (ionChange)="checkValue()"
-          placeholder="Insert a number"  [(ngModel)]= entryValue></ion-input>
-          
-          <ion-button (click)="applyFb()" expand="block" 
-          slot="end" fill="clear" shape="round">
-            Apply FizzBuzz
-          </ion-button>
-       </ion-item>
-       <ion-item *ngIf="msg" lines="none">
-         <ion-label color="danger">
-          {{msgInfo}}
-         </ion-label>
-       </ion-item>
-      </ion-col>
-    </ion-row>
+      <ion-row>
+        <ion-col>
+          <app-card-info 
+          color="medium"
+          [title]="fizz"
+          fbList={{fizzList.length}}>
+      </app-card-info>
+        </ion-col>
+      </ion-row>
 
-    <ion-row>
-      <ion-col size="12">
-        <ion-button (click)="clear()" expand="block" 
-         shape="round" 
-          *ngIf="fbList.length > 0">
-          Clear List
-        </ion-button>
-      </ion-col>
-    </ion-row>
+      <ion-row>
+        <ion-col>
+          <app-card-info 
+            color="secondary"
+            [title]="buzz"
+            fbList={{buzzList.length}}>
+        </app-card-info>
+        </ion-col>
+      </ion-row>
 
+      <ion-row>
+        <ion-col>
+          <app-card-info 
+          color="tertiary"
+          [title]="fizzBuzz"
+          fbList={{fizzBuzzList.length}}>
+      </app-card-info>
+        </ion-col>
+      </ion-row>
+
+    </div>
+
+  <ion-grid style="margin-top: 25%;">
     <ion-row>
       <ion-col sizeMd="6" offset-md="3">
-        <ion-item *ngFor="let fb of fbList let i = index">
-          <ion-label style="margin-left: 47%;"> {{i + 1}})-{{fb}}</ion-label>
+        <ion-item *ngFor="let fb of fbList let i = index"
+          lines = none class="itemList">
+          <ion-label class="lbl"> {{i + 1}})-{{fb}}</ion-label>
         </ion-item>
       </ion-col>
      </ion-row>
